infrastructure/k8s/istio/mtls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: ipe
spec:
  mtls:
    mode: PERMISSIVE
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: strict-mtls
  namespace: ipe
spec:
  selector:
    matchLabels:
      mtls-mode: strict
  mtls:
    mode: STRICT
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: default
  namespace: ipe
spec:
  host: "*.ipe.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
